@@ -58,6 +58,7 @@ class PulseManager: public QObject {
     bool set_esd_port (std::uint16_t esd_port);
     bool set_record (bool record);
     bool set_playback (bool playback);
+    bool set_debug (bool debug);
 
 
   public slots:
@@ -120,6 +121,7 @@ class PulseManager: public QObject {
 
     bool record_;
     bool playback_;
+    bool debug_;
 };
 
 #ifdef NDEBUG_DEFINE
