@@ -299,6 +299,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/pulsemanager.cpp: fix compile error due to typo.
     - src/pulsemanager.cpp: hide Windows-only code behind #ifdefs. Otherwise
       we'll get compile failures on non-Windows platforms.
+    - src/pulsemanager.{cpp,h}: add debugging setter and private variable.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
